GPII-162: Fixes safari text-overlap issue on text labels

--- a/src/discoveryTool/css/DiscoveryTool.css
+++ b/src/discoveryTool/css/DiscoveryTool.css
@@ -148,6 +148,7 @@
 .fl-icon-text {
 	position:relative;
 	top: -0.6em; /* shift text up since Checkmark icon is shifted upward. */
+	display: inline;
 }
 
 .fl-discoveryTool-panel-icon{
